# ambient_third_person_character

./: Cargo.toml  README.md  ambient.toml
assets/xbot/: Falling.fbx  Idle.fbx  Jumping.fbx  Running.fbx  Walking.fbx
src/: anim.rs  client.rs  server.rs
