[package]
name = "ambient_third_person_character"

edition = "2021"
publish = false
rust-version = "1.67.0"
version = "0.2.1"

[dependencies]
ambient_api = { version = "0.2.1" }

[[bin]]
name = "third_person_character_client"
path = "src/client.rs"
required-features = ["client"]

[[bin]]
name = "third_person_character_server"
path = "src/server.rs"
required-features = ["server"]

[features]
client = ["ambient_api/client"]
server = ["ambient_api/server"]